--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,4 +15,4 @@ jobs:
           distribution: 'adopt'
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots package
-      - run: java /src/main/java/SendTest.java
+      - run: java SendTest.java
