--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,21 +1,34 @@
-name: Java CI
+# 每天6:30执行
 
-on: [push]
+name: Start
+
+on:
+  push:
+  gollum:
+  schedule:
+    - cron: '30 22 * * *'
 
 jobs:
-  build:
-    runs-on: windows-latest
+  TiebaSignIn:
+
+    runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
+      - uses: actions/checkout@v2
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
         with:
-          java-version: '17'
-          distribution: 'adopt'
+          java-version: 1.8
+      - name: Cache local Maven repository
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
       - name: Build with Maven
-        run: mvn --batch-mode --update-snapshots package
-      - run: ls -a
-      - run: |
-          cd target
-          ls -a
+        env:
+          BDUSS: ${{ secrets.BDUSS }}
+          SCKEY: ${{ secrets.SCKEY }}
+        run: |
+          mvn compile exec:java -Dexec.mainClass="SendTest"
