--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,4 +31,4 @@ jobs:
           BDUSS: ${{ secrets.BDUSS }}
           SCKEY: ${{ secrets.SCKEY }}
         run: |
-          mvn compile exec:java -Dexec.mainClass="SendTest"
+          mvn compile exec:java -Dexec.mainClass="com.send.SendTest"
