--- a/pom.xml
+++ b/pom.xml
@@ -28,5 +28,9 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    <build>
+     <defaultGoal>compile</defaultGoal>
+    </build>
+
 
 </project>
