--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,10 +26,10 @@ jobs:
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
-#       - run:  mvn clean install package '-Dmaven.test.skip=true'
+      - run:  mvn clean install package -Dmaven.test.skip=true
       - name: Build with Maven
         env:
           BDUSS: ${{ secrets.BDUSS }}
           SCKEY: ${{ secrets.SCKEY }}
         run: |
-          mvn compile exec:java -Dexec.mainClass="com.send.SendTest"
+          mvn compile exec:java -Dexec.mainClass='com.send.SendTest'
